display probable fix, need to solve overflow text

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
   /* border: 2px solid red;   */
 }
 
+html {
+  width: 100vw;
+  height: 100vw;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -11,30 +16,69 @@ body {
   height: 100vh;
   flex-direction: column;
 }
-
+/*Scoreboard*/
 .scoreboard {
   display: flex;
   float: center;
-  /* margin-bottom: 10px; */
-  height: 120px;
-  /* width: 300px; */
-  width: 100vw;
+  height: 25%;
+  width: 100%;
+  margin-top: 2vh;
+  align-items: center;
+  justify-content: center;
 }
 
-#gameboard {
-  /* width: 300px; */
-  width: 60vw;
-  float: right;
-  height: 60vh;
-  background-color: black;
+#player-1 {
+  height: 21vh;
+  width: 21vh;
+  align-items: center;
+  justify-content: center;
   display: flex;
-  flex-wrap: wrap;
-  border: solid 1px black;
+  margin-right: 1vw;
 }
 
+#player-2 {
+  height: 21vh;
+  width: 21vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1vw;
+}
+
+.scoretext {
+  font-family: "Courier New", Monospace;
+  /* font-size: 2.5rem; */
+  font-size: 24px;
+  text-size-adjust: auto;
+  border: 2px solid black;
+  /* padding: 0 10px; */
+}
+
+.center {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+#score-1 {
+  width: 6vh;
+  height: 6vh;
+  margin-right: 50%;
+}
+/*Gameboard*/
+#gameboard {
+  width: 63vh;
+  height: 63vh;
+  background-color: black;
+  border: 1px solid black;
+  display:flex;
+  flex-wrap: wrap;
+  float:right;
+}
+
+/*Game pieces*/
 .square {
-  width: 20vw;
-  height: 20vh;
+  width: 21vh;
+  height: 21vh;
   background-color: white;
   border: solid 2px black;
   box-sizing: border-box;
@@ -44,60 +88,34 @@ body {
 }
 
 .circle {
-  height: 50%;
-  width: 50%;
+  width: 90%;
+  height: 90%;
   border-radius: 50%;
   border: 15px solid blue;
   box-sizing: border-box;
 }
 
 .cross {
-  height: 50%;
-  width: 50%;
+  width: 100%;
+  height: 100%;
   position: relative;
-  transform: rotate(45deg);
 }
 
-.cross:before, .cross:after {
+.cross::before,
+.cross::after {
   content: "";
   position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 1vh;
   background-color: red;
 }
 
-.cross:before {
-  top: 0;
-  left: 0;
-  width: 10%;
-  height: 100%;
+.cross::before {
+  transform:rotate(45deg);
 }
-
-.cross:after {
-  top: 0;
-  right: 0;
-  width: 10%;
-  height: 100%;
-}
-
-#score-1 {
-  margin-left: 10px;
-}
-
-#score-2 {
-  /* margin-left: 172px; */
-  margin-left: 18vw;
-}
-
-.scoretext {
-  font-family: "Courier New", Monospace ;
-  font-size: 2.5rem;
-  border: 2px solid black;
-  padding: 0 10px;
-}
-
-#player-1 {
-  margin: 10px 5px 10px 30vw;
-}
-
-#player-2 {
-  margin: 10px 5px 10px 10px;
+.cross::after {
+  transform:rotate(-45deg);
 }
